# ai-ctp-trader

./: .gitignore  .gitmodules  README.md
inspirai-trader/src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json  test_config_load.rs  test_serde.rs  wrapper.h
inspirai-trader/src-tauri/config/: production.toml  simnow.toml  tts.toml
inspirai-trader/src-tauri/examples/: basic_usage.rs  market_data_subscription.rs  md_spi_demo.rs  production_config_demo.rs  query_demo.rs  test_ctp_binding.rs  trading_demo.rs
inspirai-trader/src-tauri/lib/: README.md
inspirai-trader/src-tauri/lib/linux/: .gitkeep
inspirai-trader/src-tauri/lib/windows/: .gitkeep
inspirai-trader/src-tauri/src/: lib.rs  main.rs
inspirai-trader/src-tauri/src/ctp/: COMPLIANCE_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUERY_USAGE.md  README.md  TASK_3_SUMMARY.md  TASK_4_SUMMARY.md  TASK_5_SUMMARY.md  TASK_9_3_SUMMARY.md  TASK_9_4_SUMMARY.md  account_service.rs  client.rs  config.rs  config_manager.rs  ctp_sys.rs  error.rs  events.rs  ffi.rs  logger.rs  market_data_manager.rs  market_data_service.rs  mod.rs  models.rs  order_manager.rs  position_manager.rs  production_config_test.rs  query_service.rs  settlement_manager.rs  simple_production_test.rs  subscription_manager.rs  test_path_issue.rs  test_serde.rs  tests.rs  trading_service.rs
inspirai-trader/src-tauri/src/ctp/models/: trading.rs
inspirai-trader/src-tauri/src/ctp/services/: market_data_service.rs  mod.rs  (+3 more)
inspirai-trader/src-tauri/src/logging/: config.rs  context.rs  error.rs  formatter.rs  integration_test.rs  metrics.rs  mod.rs  query.rs  rotator.rs  router.rs  security.rs  writer.rs
(+161 files in other folders)
