[package]
name = "inspirai-trader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
use_bindgen = []  # 使用 bindgen 生成的绑定

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inspirai_trader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# CTP FFI 绑定生成工具
# bindgen = "0.70"  # 用于生成 C++ 绑定
# cc = "1.0"        # 用于编译 C++ 代码

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

libc = "0.2"      # 用于 FFI 操作
libloading = "0.8" # 用于动态库加载
toml = "0.8"      # 用于配置文件解析
clap = { version = "4", features = ["derive"] } # 用于命令行参数解析
ctp2rs = { version = "0.1.7", features = ["ctp_v6_7_7"] }
rand = "0.8"      # 用于生成随机数

[dev-dependencies]
tempfile = "3.0"
